# engine-r

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/engine-r/: color.h  utils.h
include/engine-r/image_formats/: tga.h
include/engine-r/rasterizer/: line.h  triangle.h
include/engine-r/reader/: objectreader.h  tga_reader.h
include/engine-r/renderer/: buffer.h  framebuffer.h  object.h  renderer.h
include/engine-r/shaders/: phong.h  shader.h
include/engine-r/window/: linuxWindow.h  window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp  utils.cpp
src/image_formats/: tga.cpp
src/rasterizer/: line.cpp  triangle.cpp
src/reader/: objectreader.cpp  tga_reader.cpp
src/renderer/: framebuffer.cpp  object.cpp  renderer.cpp
src/shaders/: phong.cpp  shader.cpp
src/window/: linuxWindow.cpp  window.cpp
